plugins/mermaid/plugin/src/test/resources/intention/gitgraph/branch.mermaid
gitGraph
  branch <error descr="Branch already exists">main</error>
  branch master
  branch <error descr="Branch already exists">master</error>
  branch correct